--- a/vcbridge-admin/application/src/main/resources/templates/layout.html
+++ b/vcbridge-admin/application/src/main/resources/templates/layout.html
@@ -9,14 +9,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<meta name="description"
-	content="CoreUI - Open Source Bootstrap Admin Template" />
-<meta name="author" content="Łukasz Holeczek" />
-<meta name="keyword"
-	content="Bootstrap,Admin,Template,Open,Source,AngularJS,Angular,Angular2,Angular 2,Angular4,Angular 4,jQuery,CSS,HTML,RWD,Dashboard,React,React.js,Vue,Vue.js" />
+<meta name="description" content="VCBridge - Admin Console" />
+<meta name="author" content="Dimis Savva" />
 <link rel="shortcut icon" href="resources/img/logo.png" />
 <!-- <link href="resources/css/bootstrap-select.min.css" rel="stylesheet" /> -->
-<title>CoreUI - Open Source Bootstrap Admin Template</title>
+<title>VCBridge - Admin Console</title>
 
 <!-- Icons -->
 <link href="resources/css/font-awesome.min.css" rel="stylesheet" />
@@ -36,13 +33,15 @@
 <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" /> -->
 <!-- <link href="resources/css/bootstrap-datetimepicker.min.css" rel="stylesheet" />
  -->
- 
- <!-- Theme included stylesheets -->
+
+<!-- Theme included stylesheets -->
 <!-- <link href="//cdn.quilljs.com/1.2.4/quill.snow.css" rel="stylesheet">
  -->
-  <link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.3/summernote.css" rel="stylesheet">
-  
-  <style>
+<link
+	href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.3/summernote.css"
+	rel="stylesheet">
+
+<style>
 .selectize-input>* {
 	vertical-align: middle;
 }
@@ -72,8 +71,8 @@
 	max-width: 80%;
 }
 </style>
-  
- </head>
+
+</head>
 
 <!-- BODY options, add following classes to body to change options
 
@@ -142,11 +141,11 @@
 					aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
-				<strong>Error</strong><span th:text="${err}">You should check in on some of
-				those fields below.</span>
+				<strong>Error</strong><span th:text="${err}">You should check
+					in on some of those fields below.</span>
 			</div>
 		</div>
-		
+
 		<main class="main" layout:fragment="content"> <!-- Breadcrumb -->
 
 
