--- a/vcbridge-admin/application/src/main/resources/templates/login.html
+++ b/vcbridge-admin/application/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
         <meta name="author" content="Dimis - Sastix"/>
         <meta name="keyword" content="SCX videoconference Login"/>
         <!-- <link rel="shortcut icon" href="assets/ico/favicon.png"> -->
-        <title>Videoconference</title>
+        <title>VCBridge - Admin Console - Login</title>
         <!-- Icons -->
         <link href="resources/css/font-awesome.min.css" rel="stylesheet"/>
         <link href="resources/css/simple-line-icons.css" rel="stylesheet"/>
