--- a/vcbridge-admin/application/src/main/resources/templates/email/cancellation.html
+++ b/vcbridge-admin/application/src/main/resources/templates/email/cancellation.html
@@ -12,10 +12,10 @@
 <title>Meeting notification</title>
 </head>
 <body class="app flex-row align-items-center">
-	<h3>Dear <span th:text="${email}"></span>,</h3>
-	<p>The meeting at <span th:text="${meeting_date}"></span> and <span th:text="${meeting_time}"></span> has been cancelled.</p>
+	<h3>Dear <span th:text="${email}">participantemail</span>,</h3>
+	<p>The meeting at <span th:text="${meeting_date}">date</span> and <span th:text="${meeting_time}">time</span> has been cancelled.</p>
 	
 	Best regards,
-	<p><span th:text="${user_first}"></span>,<span th:text="${user_lastname}"></span></p>
+	<p><span th:text="${user_first}">firstname</span>,<span th:text="${user_lastname}">lastname</span></p>
 </body>
 </html>
