--- a/vcbridge-admin/application/src/main/resources/templates/email/invitation.html
+++ b/vcbridge-admin/application/src/main/resources/templates/email/invitation.html
@@ -12,14 +12,14 @@
 <title>Meeting notification</title>
 </head>
 <body class="app flex-row align-items-center">
-	<h3>Dear <span th:text="${email}"></span>,</h3>
-	<p>You have been invited to a meeting to be held at <span th:text="${meeting_date}"></span> and <span th:text="${meeting_time}"></span>.</p>
+	<h3>Dear <span th:text="${email}">participantemail</span>,</h3>
+	<p>You have been invited to a meeting to be held at <span th:text="${meeting_date}">date</span> and <span th:text="${meeting_time}">time</span> (planned meeting duration: <span th:text="${meeting_duration_str}">duration</span>).</p>
 	<p>To connect use the following details:</p>
-	<p>Meeting URL: <span th:text="${meeting_url}"></span> - this meeting uses WebRTC technology: please use Chrome (latest).</p>
-	<p>Username: <span th:text="${meeting_username}"></span></p>
-	<p>Password: <span th:text="${meeting_password}"></span></p>
+	<p>Meeting URL: <span th:text="${meeting_url}">meetingurl</span> - this meeting uses WebRTC technology: please use Chrome (latest).</p>
+	<p>Username: <span th:text="${meeting_username}">username</span></p>
+	<p>Password: <span th:text="${meeting_password}">password</span></p>
 	
 	Thank you,
-	<p><span th:text="${user_first}"></span>,<span th:text="${user_lastname}"></span></p>
+	<p><span th:text="${user_first}">firstname</span>,<span th:text="${user_lastname}">lastname</span></p>
 </body>
 </html>
