--- a/vcbridge-admin/application/src/main/resources/templates/emailTemplate.html
+++ b/vcbridge-admin/application/src/main/resources/templates/emailTemplate.html
@@ -114,6 +114,7 @@
 									<li><b>{meeting_date}</b> - date in dd/MM/yyyy format</li>
 									<li><b>{meeting_time}</b> - time in HH:mm ZZZ (timezone)
 										format</li>
+									<li><b>{meeting_duration_str}</b> - Meeting duration e.g., 2 hour(s) and 10 minutes </li>
 								</ul>
 								<ul>
 									<li><b>{meeting_username}</b> - the generated/unique
