--- a/vcbridge-admin/application/src/main/resources/templates/email/invitation.html
+++ b/vcbridge-admin/application/src/main/resources/templates/email/invitation.html
@@ -11,15 +11,15 @@
 <!-- <link rel="shortcut icon" href="assets/ico/favicon.png"> -->
 <title>Meeting notification</title>
 </head>
-<body class="app flex-row align-items-center">
-	<h3>Dear <span th:text="${email}">participantemail</span>,</h3>
-	<p>You have been invited to a meeting to be held at <span th:text="${meeting_date}">date</span> and <span th:text="${meeting_time}">time</span> (planned meeting duration: <span th:text="${meeting_duration_str}">duration</span>).</p>
+<body th:inline="text" class="app flex-row align-items-center">
+	<h3>Dear [[${email}]],</h3>
+	<p>You have been invited to a meeting to be held at [[${meeting_date}]] and [[${meeting_time}]] (planned meeting duration: [[${meeting_duration_str}]]).</p>
 	<p>To connect use the following details:</p>
-	<p>Meeting URL: <span th:text="${meeting_url}">meetingurl</span> - this meeting uses WebRTC technology: please use Chrome (latest).</p>
-	<p>Username: <span th:text="${meeting_username}">username</span></p>
-	<p>Password: <span th:text="${meeting_password}">password</span></p>
+	<p>Meeting URL: [[${meeting_url}]] - this meeting uses WebRTC technology: please use Chrome (latest).</p>
+	<p>Username: [[${meeting_username}]]</p>
+	<p>Password: [[${meeting_password}]]</p>
 	
 	Thank you,
-	<p><span th:text="${user_first}">firstname</span>,<span th:text="${user_lastname}">lastname</span></p>
+	<p>[[${user_first}]], [[${user_lastname}]]</p>
 </body>
 </html>
